Add slides for w03

--- a/era2/Makefile
+++ b/era2/Makefile
@@ -4,7 +4,7 @@ TEXS := $(wildcard *.tex)
 
 # compile a specific .tex file to PDF and clean auxiliary files
 %.pdf: %.tex
-	TEXINPUTS=../beamer//: pdflatex -interaction=nonstopmode $<
+	TEXINPUTS=../beamer//: pdflatex -interaction=nonstopmode -shell-escape $<
 
 # compile all .tex files
 all: $(TEXS:.tex=.pdf)
